# music-craft

./: # Code Citations.md  .clinerules  .dockerignore  .env.example  .env.lyrics.example  .env.prod.example  .env.staging.example  .gitignore  .rollback-tag  .rollback-tag-staging  ADD_BUTTON_IMPLEMENTATION.md  AI_MUSIC_GENERATION_SYSTEM_DESIGN.md  AI_MUSIC_GENERATION_USAGE_GUIDE.md  API_ENDPOINTS_SPECIFICATION.md  BACKUP_QUICK_START.md  BACKUP_SYSTEM_DOCUMENTATION.md  BUG_REPORT_ADD_INSTRUMENTAL_ACTIVE_STATE.md  CHANGELOG.md  CI_CD_RUNBOOK.md  COMPREHENSIVE_SYSTEM_DOCUMENTATION.md  Caddyfile  Caddyfile.backup3  Caddyfile.staging  DEPLOYED_SHA_PROD.txt  DEPLOYED_SHA_PROD.txt.prev  DEPLOYED_SHA_STAGING.txt  DEPLOYED_SHA_STAGING.txt.prev  Dockerfile  Dockerfile.api  Dockerfile.lyrics  Dockerfile.web  ENHANCED_CALLBACK_SYSTEM.md  ENHANCED_INDEX_PAGE_PHASE1.md  FIX_RECOMMENDATIONS_NAVIGATION_ACTIVE_STATE.md  GET_STARTED_LIBRARY.md  GOOGLE_DRIVE_GUIDE.md  Git Merge Task  Stash Pull Apply.md  HISTORY_TAB_IMPLEMENTATION.md  IMPLEMENTATION_PLAN_WITH_KIE_API.md  IMPLEMENTATION_STATUS_REPORT.md  (+128 more)
.github/: copilot-instructions.md
app/: __init__.py  cloudflared_utils.py  config.py  forms.py  (+6 more)
lyrics_extraction_lib/: .gitignore  INTEGRATION.md  LICENSE  MANIFEST.in  MIGRATION.md  QUICKSTART.md  README.md  STRUCTURE.md  pyproject.toml  requirements.txt  setup.py
lyrics_extraction_lib/examples/: __init__.py  example_advanced.py  example_basic.py  example_batch.py  example_components.py  example_error_handling.py
lyrics_extraction_lib/lyrics_extraction/: __init__.py  extractor.py
lyrics_extraction_lib/lyrics_extraction/pipeline/: __init__.py  postprocess.py  separate.py  transcribe.py  utils.py
(+209 files in other folders)
